data/derived/sp14/progs/unify/prog4265.ml.out
Characters 179-183:
  | Average (expr,expr1)->((eval (expr x y)) +. (eval (expr1 x y)))/.2
                                  ^^^^
Error: This expression has type expr
       This is not a function; it cannot be applied.
